<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.ovgu.featureide</groupId>
	<artifactId>de.ovgu.featureide.root</artifactId>
	<version>3.6.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho-version>1.1.0</tycho-version>
		<tycho-extras-version>1.1.0</tycho-extras-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<tycho.testArgLine></tycho.testArgLine>
	</properties>

	<modules>
		<!--Plugin-Modules-->
		<module>plugins/de.ovgu.featureide.fm.core</module>
		<module>plugins/de.ovgu.featureide.fm.ui</module>
		<module>plugins/de.ovgu.featureide.fm.attributes</module>
		<module>plugins/de.ovgu.featureide.core</module>
		<module>plugins/de.ovgu.featureide.ui</module>
		<module>plugins/br.ufal.ic.colligens</module>
		<module>plugins/de.ovgu.featureide.core.ahead</module>
		<module>plugins/de.ovgu.featureide.core.antenna</module>
		<module>plugins/de.ovgu.featureide.core.aspectj</module>
		<module>plugins/de.ovgu.featureide.core.conversion.ahead-featurehouse</module>
		<module>plugins/de.ovgu.featureide.core.featurecpp</module>
		<module>plugins/de.ovgu.featureide.core.featurehouse</module>
		<module>plugins/de.ovgu.featureide.core.framework</module>
		<module>plugins/de.ovgu.featureide.core.images</module>
		<module>plugins/de.ovgu.featureide.core.mpl</module>
		<module>plugins/de.ovgu.featureide.core.munge</module>
		<module>plugins/de.ovgu.featureide.core.munge.android</module>
		<module>plugins/de.ovgu.featureide.core.runtime</module>
		<module>plugins/de.ovgu.featureide.examples</module>
		<module>plugins/de.ovgu.featureide.migration</module>
		<module>plugins/de.ovgu.featureide.ui.android</module>
		<module>plugins/de.ovgu.featureide.ui.mpl</module>
		
		<!--Testmodules-->
		<module>tests/de.ovgu.featureide.fm.core-test</module>
		<module>tests/de.ovgu.featureide.fm.ui-test</module>
		<module>tests/de.ovgu.featureide.ui-test</module>
		<module>tests/de.ovgu.featureide.core.ahead-test</module>
		<module>tests/de.ovgu.featureide.core.antenna-test</module>
		<module>tests/de.ovgu.featureide.core.aspectj-test</module>
		<module>tests/de.ovgu.featureide.core.featurehouse-test</module>
		<module>tests/de.ovgu.featureide.core.munge-test</module>
		<module>tests/de.ovgu.featureide.fm.attributes-test</module>
	</modules>

	<!--The profiles are NightlyUpdates (nu) and GuiTests (gui)
		run 'mvn -Pnu clean package' to build an update-site
		run 'mvn -Pnu -Pgui clean verify' to build update-site and execute gui-tests
		NOTE: 	Do not run 'mvn -Pgui clean verify'. 
				Gui-Test-Module needs an installable FeatureIDE-Version from nu.-->
	<profiles>
		<profile>
            <id>nu</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>deploy</module>
            </modules>
        </profile>
        <profile>
            <id>gui</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>gui-tests/de.ovgu.featureide.fm.gui-test</module>
            </modules>
        </profile>
    </profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<!-- <dependencies> <dependency> <groupId>org.eclipse.tycho.extras</groupId> 
					<artifactId>tycho-buildtimestamp-jgit</artifactId> <version>${tycho-extras-version}</version> 
					</dependency> </dependencies> <configuration> <timestampProvider>jgit</timestampProvider> 
					<jgit.ignore> pom.xml </jgit.ignore> </configuration> -->
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<useUIHarness>true</useUIHarness>
					<includes>
						<include>**/T*.java</include>
						<include>**/B*.java</include>
						<include>**/*Test.java</include>
						<include>**/*Tests.java</include>
					</includes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.4</version>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-resources-plugin
										</artifactId>
										<versionRange>
											[2.4.3,)
										</versionRange>
										<goals>
											<goal>resources</goal>
											<goal>testResources</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.eclipse.tycho
										</groupId>
										<artifactId>
											tycho-compiler-plugin
										</artifactId>
										<versionRange>
											[0.23.1,)
										</versionRange>
										<goals>
											<goal>compile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.eclipse.tycho
										</groupId>
										<artifactId>
											tycho-packaging-plugin
										</artifactId>
										<versionRange>
											[0.23.1,)
										</versionRange>
										<goals>
											<goal>build-qualifier</goal>
											<goal>build-qualifier-aggregator</goal>
											<goal>validate-id</goal>
											<goal>validate-version</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<!-- mvn clean verify jacoco:report -->
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.4</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<repository>
			<id>oxygen</id>
			<url>http://download.eclipse.org/releases/oxygen</url>
			<layout>p2</layout>
		</repository>
	</repositories>

	<dependencies>
	</dependencies>
</project>